test/link/linkerscript-no-newline-eof.out
error: The linker script assigns section "test" to address $0000, but it was already at $0539
    at linkerscript-no-newline-eof.link(2)
Linking failed with 1 error
