test/link/linkerscript-no-newline-eof.asm
section "test", rom0[1337]
label:: dw label
